# yuralib

./: .gitignore  README.md  index.md  tags  work_files.md  yuralib.sh
add/: openxlsx.sh  ruralis2.sh  rustis.sh
prj/ivvi/: Makefile  body.sh  bookmark.txt  ivvi
prj/ivvi/detailed_design_document/: ivvi.md
prj/ivvi/include/: ivvi.hpp  task.hpp  task2.hpp  yura25.hpp  yuraterm.hpp
prj/ivvi/src/: ivvi.cpp  main.cpp  task.cpp  yura25.cpp  yuraterm.cpp
prj/try/: Doxyfile  body.sh  lap.cpp  memo.md
prj/try/blender/: 250706.blend
prj/try/src/: CMakeLists.txt  try-eigen-241214.cpp
prj/try/src/241215-try-cv/: CMakeLists.txt
prj/try/src/250102-try-lap/: 00memo.md  CMakeLists.txt  lap.cpp  try-lap.cpp
prj/try/src/250105-try-task/: CMakeLists.txt
prj/try/src/250111-try-rnd/: CMakeLists.txt
prj/try/src/250118-try-gtest/: CMakeLists.txt  try-gtest.cpp
prj/try/src/250125-try-utf8/: CMakeLists.txt  utf8lines.cpp
prj/try/src/250201-try-sdl/: CMakeLists.txt  try-sdl.cpp
prj/try/src/250202-try-dijkstra/: CMakeLists.txt  memo.md  try-dijkstra.cpp
prj/try/src/250215-try-ekf/: CMakeLists.txt  ekf.md  try-ekf.cpp
prj/try/src/250309-try-nouji/: 00bouji.txt  CMakeLists.txt  try-nouji.cpp
prj/try/src/include/: extended_kalman_filter.hpp  utf8lines.hpp  yuraterm.hpp
prj/try/src/test/: CMakeLists.txt  test.cpp
prj/try/src/try-cv-241215/: try-cv.cpp
prj/try/src/try-lap-250102/: CMakeLists.txt  lap.cpp  lap.h  rng.hpp  task.hpp  try-lap.cpp
prj/try/src/try-rnd-250111/: try-rnd.cpp
prj/try/src/try-task-250105/: CMakeLists.txt  task.hpp  try-task.cpp
prj/try2/: Makefile  test
prj/try2/src/250320scr/: try.cpp  try2.cpp
prj/try_scr/: Makefile  body.sh
prj/try_scr/include/: terminal_screen.hpp
prj/try_scr/src/: main.cpp
prj/work_diary/2502/: 250202.md
prj/yura53/: 2025money.txt  Makefile  body.sh  chk_net.sh  jap  jap.cpp  test.txt  tryclip  utjap
prj/yura53/docker/: Dockerfile  body.sh
prj/yura53/html/: 0000-index.html  0000.html  0001-2025..html  0001-2025.html  0001-2025年の記録.html  0001.html  0002-2025money.html  20250810-JAP.html  2025年KL345.html  2025年の記録.html  2025年予実.html  2025年収支.html  2025年記録.html  2025年農業.html  2026年予実.html  KL345.html  SL33.html  agriculture.html  google_clouds.html  money.html  sidemenu.html  style.css  temp.html  test.csv  機械利用組合.html
prj/yura53/include/: http_server.hpp  ivvi.hpp  jap.hpp  jap0.hpp  jap_csv.hpp  jap_forth.hpp  jap_notation.hpp  jap_zero.hpp  markdown.hpp  task.hpp  terminal_screen.hpp  yura.hpp  yura_pipe.hpp  yura_popen.hpp  yura_sqlite.hpp  yuraterm.hpp
prj/yura53/md/: 0000-index.md  0001-2025.md  0001-2025年の記録.md  0002-2025money  0002-2025money.md  2025年KL345.md  2025年予実.md  2025年収支.md  2025年記録.md  2025年農業.md  2026年予実.md  250810-JAP FORTH.md  250810-JAP.md  KL345.md  SL33.md  sidemenu.md  機械利用組合.md  農地.csv
prj/yura53/objs/: artifical_nerves.o.d  http_server.o.d  ivvi.o.d  jap_csv.o.d  jap_forth.o.d  jap_zero.o.d  main.o.d  markdown.o.d  task.o.d  yura.o.d  yura_pipe.o.d  yura_sqlite.o.d  yuraterm.o.d
prj/yura53/src/: 0000-index.md  0000.md  0001-2025..md  0001-2025.md  0001.md  0002-try-jap-maid.md  00bibou.md  agriculture.md  clipboard.mm  ivvi.cpp  jap_csv.cpp  jap_forth.cpp  jap_notation.cpp  jap_zero.cpp  main.cpp  markdown.cpp  money.md  task.cpp  terminal_screen.cpp  test.py  try-temp.cpp  try_python_gui.py  yura.cpp  yura_pipe.cpp  yura_popen.cpp  yura_sqlite.cpp  yuraterm.cpp
prj/yura53/src_jap/: ivvi.cpp  jap_zero.cpp
prj/yura53/src_jap0/: jap0.cpp  jap0_main.cpp  main.cpp
prj/yura53/tax/: 2025年収支.md  2025確定申告.md
prj/yura53/txt/: 2025money.txt
prj/yura53/ut/: ut.cpp
prj/yura53/wav/: body.sh
prj/yura54/: .gitignore  2025money.txt  Makefile  body.sh  tags  test.txt
prj/yura54/html/: analog_clock.html  analog_clock1.html  analog_clock2.html  date_generator.html  psv_sum.html  psv_to_code.html  psv_to_tsv.html
prj/yura54/include/: jap.hpp  jap0.hpp  jap1.hpp  jap_pipe.hpp
prj/yura54/md/: 20260124_AttentionIsAllYouNeed.md  20260418_Rust_Programming_Language.md  20260419_towards_retirement_at_age60.md  20260506.FCStd  20260601_agriculture  2026_Cash_Flow.md  2026_Plan_vs_Actual  2026_Plan_vs_Actual.md  2026年予実.md  2026年収支.md  Farm_equipment.md  SL33.md  sidemenu.md  to_aac.sh  機械利用組合.md
prj/yura54/src_jap0/: jap0.cpp  jap0_bord.cpp  jap0_main.cpp  jap_pipe.cpp  jap_sqlite.cpp  test.html
prj/yura54/src_jap1/: jap1_main.cpp
prj/yura54/src_jap54/: async_get_char.cpp  jap54.cpp  jap54.hpp  jap54test.cpp  main.cpp
prj/yura54/src_tests/: jap_tests.cpp
prj/yura54/try/: 20260314_term.cpp  20260314_term.hpp  20260324_interactive_process.cpp  Makefile  async_get_char.cpp  async_get_char.hpp  body.sh  pipe_fork.c  tags  try  wait_for_stdin.cpp
prj/yura54/try_rust/guessing_game/: body.sh
prj/yura54/try_rust/guessing_game/src/: main.rs
sh/: ejdict.sh  rustis.sh
ut/: main.cpp
